#10: Avoid horizontal scroll bar in trip detail, email, and newsletter

--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,6 @@ table.changehistory{
 
 .triphub-navbar {
   color: white; /* hack */
-  font-size: medium;
 }
 
 .triphub-navbar:hover {
